Make sure the underscore in function names are visible in links (patch by Simon Eugster <simon dot eu at gmail dot com>)

--- a/styles/site.css
+++ b/styles/site.css
@@ -853,6 +853,12 @@ div.example div.screenshot img {
 }
 /* }}} */
 
+/* Make sure the underscore in many function names are visible */
+div.refentry a, div.reference a, div.section a {
+	text-decoration: none;
+	border-bottom: 1px solid #009;
+}
+
 /*
  * vim: noet
  */
